--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
     <title>Frontend Mentor | Insure landing page</title>
 
     <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-    <link rel="stylesheet" href="/style/index.css" />
-    <link rel="stylesheet" href="/style/resp.css" />
+    <link rel="stylesheet" href="index.css" />
+    <link rel="stylesheet" href="resp.css" />
   </head>
   <body>
     <div id="wrapper">
