--- a/index.html
+++ b/index.html
@@ -269,6 +269,6 @@
         </div>
       </section>
     </footer>
-    <script src="script/index.js"></script>
+    <script src="index.js"></script>
   </body>
 </html>
